Sidebar overflow fix to avoid horizontal scrollbar

--- a/thinktime-fix.css
+++ b/thinktime-fix.css
@@ -19,6 +19,10 @@ MAIN FOCUS
 
 LATEST FIXES
 
+13.08.2025
+----------
+Sidebar overflow fix to avoid horizontal scrollbar
+
 11.08.2025
 ----------
 Attachments in ticket subject - Min width 120px
@@ -1806,6 +1810,7 @@ a[class^="org-tools-grid-module__orgTool--"] {
 [class*=" collapsible-sidebar-module__sidebar--"] {
   padding: 8px;
   /* max-width: fit-content; */
+  overflow-x: hidden;
 }
 [class*=" task-type-module__task--"] {
   /* display: contents; */
